--- a/work.html
+++ b/work.html
@@ -1,1 +1,70 @@
+<!DOCTYPE html>
+<head>
+  <meta charset="UTF-8">
+  <link rel="icon" type="image/png" href="http://i.imgur.com/3ekcifO.png">
+  <script src="//cdn.optimizely.com/js/5168400477.js"></script>
+  <title>Valentina Pardi | Home</title>
+  <link href='https://fonts.googleapis.com/css?family=Dosis:200' rel='stylesheet' type='text/css'>
+  <link href='https://fonts.googleapis.com/css?family=Oswald:700' rel='stylesheet' type='text/css'>
+  <style>
+    body{
+      margin: 0;
+    text-align: center;
+    background-color: white;
+    color: black;
+    font-family: 'Dosis', sans-serif;;
+     background-repeat: no-repeat;
+     background-size: cover;
+     padding: 15px;
+      background-image:  url(http://i.imgur.com/LlPLCyG.png);
+      background-attachment: fixed;
+    }
+    a {
+  color: black;
+  text-decoration: none;
+}
+a:hover {
+  color: grey;
+}
+h1 {
+  color: black;
+  text-shadow: 2px 2px 2px grey;
+  transition: 1s all;
+  font-family: 'Oswald', sans-serif;
+}
+h1:hover {
+  color:  #D3D3D3;
+}
+#what-we-do{
+  background-color: black;
+  padding: 20px;
+}
+#what-we-do h1{
+  color: white;
+}
+#who-i-am{
+  margin-top: 30px;
+  background-color: white;
+  padding: 20px;
+}
+#who-i-am h1{
+  color: black;
+}
+nav{
+  position: absolute;
+  top: 20px;
+  right: 20px;
+}
+</style>
+</head>
 
+<body>
+<section id="hero">
+  
+<nav><a href="http://valentinapardi.me/index">HOME</a> | <a href="http://valentinapardi.me/about">ABOUT ME</a> | <a href="http://valentinapardi.me/work">WORK</a> | <a href="http://valentinapardi.me/contact">CONTACT ME</a><br></nav>
+<img src="http://i.imgur.com/5x9NxZn.png" height="650" alt="UA Designs logo">
+<p><a href="https://www.linkedin.com/in/valentina-pardi-a86ba6b4?trk=nav_responsive_tab_profile" target="_blank"> <img src="http://i.imgur.com/2IVemHw.png" height="20" alt="LinkedIn"></a> <a href="https://twitter.com/payval_" target="_blank"> <img src="http://i.imgur.com/5el9c6p.png" height="20" alt="Twitter"></a> <a href="https://www.instagram.com/itsvalzzz/" target="_blank"> <img src="http://i.imgur.com/oOrV8M8.png" height="20" alt="Instagram"></a><br>
+</section>
+
+</body>
+<footer>Valentina Pardi © 2016</footer>
