--- a/about.html
+++ b/about.html
@@ -69,7 +69,7 @@ nav{
 </head>
 <article>
 <section id="hero">
-<nav><a href="http://valentinapardi.me/">HOME</a> | <a href="#who-i-am">ABOUT ME</a> | WORK | <a href="http://valentinapardi.me/contact">CONTACT ME</a><br></nav>
+<nav><a href="index.html">HOME</a> | <a href="about.html">ABOUT ME</a> | <a href="work.html">WORK</a> | <a href="contact.html">CONTACT ME</a><br></nav>
 </section>
 <section id="who-i-am">
   <h1> WHO I AM </h1>
