--- a/contact.html
+++ b/contact.html
@@ -56,7 +56,7 @@ nav{
 </head>
 <article>
 <section id="hero">
-<nav><a href="http://valentinapardi.me/">HOME</a> | <a href="http://valentinapardi.me/about">ABOUT ME</a> | WORK | <a href="http://valentinapardi.me/contact">CONTACT ME</a><br></nav>
+<nav><a href="index.html">HOME</a> | <a href="about.html">ABOUT ME</a> | <a href="work.html">WORK</a> | <a href="contact.html">CONTACT ME</a><br></nav>
 </section>
 <section id="contact-me">
   <h1> CONTACT ME </h1>
