--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@ nav{
 <section id="hero">
   
 <nav><a href="index.html">HOME</a> | <a href="about.html">ABOUT ME</a> | <a href="work.html">WORK</a> | <a href="contact.html">CONTACT ME</a><br></nav>
-<img src="http://i.imgur.com/5x9NxZn.png" height="650" alt="UA Designs logo">
+<img src="http://i.imgur.com/ErvOMO1.png" height="650" alt="UA Designs logo">
 
 <article>
 <h1>UA Designs Webpage</h1>
