--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
      background-size: cover;
      padding: 15px;
       background-image:  url(http://i.imgur.com/LlPLCyG.png);
+      background-attachment: fixed;
     }
     a {
   color: black;
@@ -27,8 +28,6 @@ a:hover {
 }
 h1 {
   color: black;
-  text-shadow: 2px 2px 2px grey;
-  transition: 1s all;
   font-family: 'Oswald', sans-serif;
 }
 h1:hover {
