--- a/index.html
+++ b/index.html
@@ -54,6 +54,16 @@ nav{
   right: 20px;
 }
 
+img {
+   position: absolute;
+   top: 50%;
+   left: 50%;
+   width: 500px;
+   height: 500px;
+   margin-top: -250px; /* Half the height */
+   margin-left: -250px; /* Half the width */
+}
+
   </style>
 </head>
 
