--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ nav{
   right: 20px;
 }
 
-img {
+img #ualogo {
    position: absolute;
    top: 50%;
    left: 50%;
@@ -71,7 +71,7 @@ img {
 <section id="hero">
   
 <nav><a href="index.html">HOME</a> | <a href="about.html">ABOUT ME</a> | <a href="work.html">WORK</a> | <a href="contact.html">CONTACT ME</a><br></nav>
-<img src="http://i.imgur.com/ErvOMO1.png" height="650" alt="UA Designs logo">
+<img id="ualogo" src="http://i.imgur.com/ErvOMO1.png" height="650" alt="UA Designs logo">
 
 <article>
 <p> We provide development services. <a href="" onclick="showPrices(event)"> Please see our price list. </a> </p>
