--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
     background-color: white;
     color: black;
     font-family: 'Dosis', sans-serif;;
-     background-repeat: no-repeat;
-     background-size: cover;
-     padding: 15px;
-      background-image:  url(http://i.imgur.com/LlPLCyG.png);
-      background-attachment: fixed;
+      background: url(http://i.imgur.com/LlPLCyG.png) no-repeat center center fixed; 
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
     }
     a {
   color: black;
