--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@ img #ualogo {
    left: 50%;
    width: 500px;
    height: 500px;
-   margin-top: -250px; /* Half the height */
-   margin-left: -250px; /* Half the width */
+   margin-top: -300px;
+   margin-left: -300px;
 }
 
   </style>
