--- a/index.html
+++ b/index.html
@@ -71,7 +71,9 @@ img #ualogo {
 <section id="hero">
   
 <nav><a href="index.html">HOME</a> | <a href="about.html">ABOUT ME</a> | <a href="work.html">WORK</a> | <a href="contact.html">CONTACT ME</a><br></nav>
-<img id="ualogo" src="http://i.imgur.com/ErvOMO1.png" height="650" alt="UA Designs logo">
+<article>
+  <img id="ualogo" src="http://i.imgur.com/ErvOMO1.png" height="650" alt="UA Designs logo">
+</article>
 
 <article>
 <p> We provide development services. <a href="" onclick="showPrices(event)"> Please see our price list. </a> </p>
