--- a/index.html
+++ b/index.html
@@ -56,12 +56,13 @@ nav{
 
 img #ualogo {
    position: absolute;
-   top: 100%;
+   top: 50%;
    left: 50%;
    width: 500px;
    height: 500px;
    margin-top: -250px;
    margin-left: -250px;
+   padding: 20px;
 }
 
   </style>
