--- a/index.html
+++ b/index.html
@@ -64,6 +64,9 @@ img #ualogo {
    margin-left: -250px;
    padding: 20px;
 }
+article {
+  padding: 20px;
+}
 
   </style>
 </head>
@@ -72,9 +75,8 @@ img #ualogo {
 <section id="hero">
   
 <nav><a href="index.html">HOME</a> | <a href="about.html">ABOUT ME</a> | <a href="work.html">WORK</a> | <a href="contact.html">CONTACT ME</a><br></nav>
-<article>
+<br>
   <img id="ualogo" src="http://i.imgur.com/ErvOMO1.png" height="650" alt="UA Designs logo">
-</article>
 
 <article>
 <p> We provide development services. <a href="" onclick="showPrices(event)"> Please see our price list. </a> </p>
