--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link href='https://fonts.googleapis.com/css?family=Oswald:700' rel='stylesheet' type='text/css'>
   <style>
     body{
-      margin: 0;
+      margin-top: 80px;
     text-align: center;
     background-color: white;
     color: black;
