--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@ p {
   
 <nav><a href="index.html">HOME</a> | <a href="about.html">ABOUT ME</a> | <a href="work.html">WORK</a> | <a href="contact.html">CONTACT ME</a><br></nav>
 <br>
-  <img id="ualogo" src="http://i.imgur.com/ErvOMO1.png" height="650" alt="UA Designs logo">
+  <img id="ualogo" src="http://i.imgur.com/1WR1hqT.png" height="650" alt="UA Designs logo">
 
 <article>
 <p> We provide development services. <a href="" onclick="showPrices(event)"> Please see our price list. </a> </p>
