--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
+  width: 100%;
+height: 100%;
     }
     a {
   color: black;
