--- a/index.html
+++ b/index.html
@@ -21,6 +21,10 @@
   width: 100%;
 height: 100%;
 position: fixed;
+top:0px;
+    bottom:0px;
+    left:0px;
+    right:0px;
     }
     a {
   color: black;
