--- a/index.html
+++ b/index.html
@@ -79,14 +79,13 @@ p {
 <nav><a href="index.html">HOME</a> | <a href="about.html">ABOUT ME</a> | <a href="work.html">WORK</a> | <a href="contact.html">CONTACT ME</a><br></nav>
 <br>
   <img id="ualogo" src="http://i.imgur.com/1WR1hqT.png" height="650" alt="UA Designs logo">
-
+<h1>Welcome to UA Designs webpage</h1>
 <article>
 <p> We provide development services. <a href="" onclick="showPrices(event)"> Please see our price list. </a> </p>
 </article>
 
 <p><a href="https://www.linkedin.com/in/valentina-pardi-a86ba6b4?trk=nav_responsive_tab_profile" target="_blank"> <img src="http://i.imgur.com/2IVemHw.png" height="20" alt="LinkedIn"></a> <a href="https://twitter.com/payval_" target="_blank"> <img src="http://i.imgur.com/5el9c6p.png" height="20" alt="Twitter"></a> <a href="https://www.instagram.com/itsvalzzz/" target="_blank"> <img src="http://i.imgur.com/oOrV8M8.png" height="20" alt="Instagram"></a><br>
 </section>
-
 <script>
 //window.open("http://valentinapardi.me/prices.html","", "height=200,width=300,top=300,left=800");
 function showPrices(event){
