--- a/about.html
+++ b/about.html
@@ -81,6 +81,7 @@ nav{
   <p> <img src="http://i.imgur.com/qQUxNzd.png" height="180" alt="Web Design & Development"> <img src="http://i.imgur.com/XtIj4Lo.png" height="180" alt="Internet Marketing"> <img src="http://i.imgur.com/lqB5ZpC.png" height="180" alt="Website Maintenance & Support"> <img src="http://i.imgur.com/h0BjcNZ.png" height="180" alt="Branding & Logo Design"> </p>
 </section>
 </article>
+<iframe src="Valentina.Pardi.Resume.pdf" title="Valentina Pardi Resume" width=800px height=600px></iframe>
 <!-- SnapWidget -->
 <iframe src="http://snapwidget.com/in/?u=dmFsZW5wYXJkaXxpbnwxMjV8M3wzfHxub3w1fG5vbmV8b25TdGFydHx5ZXN8bm8=&ve=080316" title="Instagram Widget" class="snapwidget-widget" allowTransparency="true" frameborder="0" scrolling="no" style="border:none; overflow:hidden; width:390px; height:390px"></iframe>
 <section>
