--- a/about.html
+++ b/about.html
@@ -53,6 +53,7 @@ nav{
       background:  url(http://i.imgur.com/LlPLCyG.png);
       background-size: cover;
       background-repeat: no-repeat;
+      background-attachment: fixed;
 }
 
 #who-i-am{
