--- a/work.html
+++ b/work.html
@@ -3,7 +3,7 @@
   <meta charset="UTF-8">
   <link rel="icon" type="image/png" href="http://i.imgur.com/3ekcifO.png">
   <script src="//cdn.optimizely.com/js/5168400477.js"></script>
-  <title>Valentina Pardi | Home</title>
+  <title>Valentina Pardi | Work</title>
   <link href='https://fonts.googleapis.com/css?family=Dosis:200' rel='stylesheet' type='text/css'>
   <link href='https://fonts.googleapis.com/css?family=Oswald:700' rel='stylesheet' type='text/css'>
   <style>
@@ -64,6 +64,18 @@ nav{
 <nav><a href="index.html">HOME</a> | <a href="about.html">ABOUT ME</a> | <a href="work.html">WORK</a> | <a href="contact.html">CONTACT ME</a><br></nav>
 <p><a href="https://www.linkedin.com/in/valentina-pardi-a86ba6b4?trk=nav_responsive_tab_profile" target="_blank"> <img src="http://i.imgur.com/2IVemHw.png" height="20" alt="LinkedIn"></a> <a href="https://twitter.com/payval_" target="_blank"> <img src="http://i.imgur.com/5el9c6p.png" height="20" alt="Twitter"></a> <a href="https://www.instagram.com/itsvalzzz/" target="_blank"> <img src="http://i.imgur.com/oOrV8M8.png" height="20" alt="Instagram"></a><br>
 </section>
+
+<div id="slideShowImages">
+    <img src="http://i.imgur.com/aOFUd00.jpg" alt="Slide 1">
+    <img src="http://i.imgur.com/tp0DWJt.jpg" alt="Slide 2">
+    <img src="http://i.imgur.com/pdoODi9.jpg" alt="Slide 3">    
+    <img src="http://i.imgur.com/5DixkeO.jpg" alt="Slide 4">
+    <img src="http://i.imgur.com/OLx0mnZ.jpg" alt="Slide 5">
+  </div>  
+  <button id="slideShowButton"></button> <!-- Optional button element. -->
+  <script src="slideShow.js"></script>
+
+<iframe src="Valentina.Pardi.Resume.pdf" title="Valentina Pardi Resume" width=800px height=600px></iframe>
 
 </body>
 <footer>Valentina Pardi © 2016</footer>
