--- a/work.html
+++ b/work.html
@@ -55,6 +55,19 @@ nav{
   top: 20px;
   right: 20px;
 }
+
+#slideShowImages {
+      border: 1px gray solid;
+      background-color: lightgray;
+      height: 200px;
+      width: 200px;
+    }   
+  
+    #slideShowImages img {
+      border: 0.8em black solid;
+      padding: 3px;
+    }  
+    
 </style>
 </head>
 
