--- a/work.html
+++ b/work.html
@@ -75,7 +75,7 @@ nav{
 <nav><a href="index.html">HOME</a> | <a href="about.html">ABOUT ME</a> | <a href="work.html">WORK</a> | <a href="contact.html">CONTACT ME</a><br></nav>
 
 
-<div id="slideShowImages">
+<br><div id="slideShowImages">
     <img src="http://i.imgur.com/aOFUd00.jpg" alt="Slide 1">
     <img src="http://i.imgur.com/tp0DWJt.jpg" alt="Slide 2">
     <img src="http://i.imgur.com/pdoODi9.jpg" alt="Slide 3">    
