--- a/work.html
+++ b/work.html
@@ -75,13 +75,13 @@ nav{
 <nav><a href="index.html">HOME</a> | <a href="about.html">ABOUT ME</a> | <a href="work.html">WORK</a> | <a href="contact.html">CONTACT ME</a><br></nav>
 
 
-<br><div id="slideShowImages">
+<p><div id="slideShowImages">
     <img src="http://i.imgur.com/aOFUd00.jpg" alt="Slide 1">
     <img src="http://i.imgur.com/tp0DWJt.jpg" alt="Slide 2">
     <img src="http://i.imgur.com/pdoODi9.jpg" alt="Slide 3">    
     <img src="http://i.imgur.com/5DixkeO.jpg" alt="Slide 4">
     <img src="http://i.imgur.com/OLx0mnZ.jpg" alt="Slide 5">
-  </div>  
+  </div>
   <button id="slideShowButton"></button> <!-- Optional button element. -->
   <script src="slideShow.js"></script>
 
