--- a/work.html
+++ b/work.html
@@ -73,9 +73,9 @@ nav{
 <section id="hero">
   
 <nav><a href="index.html">HOME</a> | <a href="about.html">ABOUT ME</a> | <a href="work.html">WORK</a> | <a href="contact.html">CONTACT ME</a><br></nav>
-
-
-<p><div id="slideShowImages">
+</section>
+<section>
+<div id="slideShowImages">
     <img src="http://i.imgur.com/aOFUd00.jpg" alt="Slide 1">
     <img src="http://i.imgur.com/tp0DWJt.jpg" alt="Slide 2">
     <img src="http://i.imgur.com/pdoODi9.jpg" alt="Slide 3">    
