--- a/work.html
+++ b/work.html
@@ -73,9 +73,8 @@ nav{
 <section id="hero">
   
 <nav><a href="index.html">HOME</a> | <a href="about.html">ABOUT ME</a> | <a href="work.html">WORK</a> | <a href="contact.html">CONTACT ME</a><br></nav>
-</section>
-<section>
-<div id="slideShowImages">
+
+<p><div id="slideShowImages">
     <img src="http://i.imgur.com/aOFUd00.jpg" alt="Slide 1">
     <img src="http://i.imgur.com/tp0DWJt.jpg" alt="Slide 2">
     <img src="http://i.imgur.com/pdoODi9.jpg" alt="Slide 3">    
@@ -84,7 +83,7 @@ nav{
   </div>
   <button id="slideShowButton"></button> <!-- Optional button element. -->
   <script src="slideShow.js"></script>
-
+</p>
 <iframe src="Valentina.Pardi.Resume.pdf" title="Valentina Pardi Resume" width=500px height=400px></iframe>
 
 <p><a href="https://www.linkedin.com/in/valentina-pardi-a86ba6b4?trk=nav_responsive_tab_profile" target="_blank"> <img src="http://i.imgur.com/2IVemHw.png" height="20" alt="LinkedIn"></a> <a href="https://twitter.com/payval_" target="_blank"> <img src="http://i.imgur.com/5el9c6p.png" height="20" alt="Twitter"></a> <a href="https://www.instagram.com/itsvalzzz/" target="_blank"> <img src="http://i.imgur.com/oOrV8M8.png" height="20" alt="Instagram"></a><br>
