--- a/work.html
+++ b/work.html
@@ -72,7 +72,7 @@ nav{
 
 <section id="hero">
   
-<nav><a href="index.html">HOME</a> | <a href="about.html">ABOUT ME</a> | <a href="work.html">WORK</a> | <a href="contact.html">CONTACT ME</a><br></nav>
+<nav><a href="index.html">HOME</a> | <a href="about.html">ABOUT ME</a> | <a href="work.html">WORK</a> | <a href="contact.html">CONTACT ME</a></nav><br>
 
 <p><div id="slideShowImages">
     <img src="http://i.imgur.com/aOFUd00.jpg" alt="Slide 1">
