--- a/work.html
+++ b/work.html
@@ -71,10 +71,9 @@ nav{
 #slideshow { 
     margin: 50px auto; 
     position: relative; 
-    width: 100px; 
-    height: 100px; 
+    width: 300px; 
+    height: 300px; 
     padding: 10px; 
-    box-shadow: 0 0 20px rgba(0,0,0,0.4); 
 }
 
 #slideshow > div { 
@@ -96,19 +95,19 @@ nav{
 
 <div id="slideshow">
    <div>
-     <img src="http://i.imgur.com/aOFUd00.jpg">
+     <img src="http://i.imgur.com/aOFUd00.jpg" width="300" height="300">
    </div>
    <div>
-     <img src="http://i.imgur.com/tp0DWJt.jpg">
+     <img src="http://i.imgur.com/tp0DWJt.jpg" width="300" height="300">
    </div>
    <div>
-     <img src="http://i.imgur.com/pdoODi9.jpg">
+     <img src="http://i.imgur.com/pdoODi9.jpg" width="300" height="300">
    </div>
    <div>
-     <img src="http://i.imgur.com/5DixkeO.jpg">
+     <img src="http://i.imgur.com/5DixkeO.jpg" width="300" height="300">
    </div>
    <div>
-     <img src="http://i.imgur.com/OLx0mnZ.jpg">
+     <img src="http://i.imgur.com/OLx0mnZ.jpg" width="300" height="300">
    </div>
 </div>
 
