--- a/work.html
+++ b/work.html
@@ -57,75 +57,88 @@ nav{
 }
 
 .css-slideshow{
-   position: relative;
-   max-width: 495px;
-   height: 370px;
-   margin: 5em auto .5em auto;
+  position: relative;
+  max-width: 495px;
+  height: 370px;
+  margin: 5em auto .5em auto;
 }
 .css-slideshow figure{
-   margin: 0;
-   position: absolute;
+  margin: 0;
+  max-width: 495px;
+  height: 370px;
+  background: #000;
+  position: absolute;
+}
+.css-slideshow img{
+  box-shadow: 0 0 2px #666;
 }
 .css-slideshow figcaption{
-   position: absolute;
-   top: 0;
-   color: #fff;
-   background: rgba(0,0,0, .3);
-   font-size: .8em;
-   padding: 8px 12px;
-   opacity: 0;
-   transition: opacity .5s;
+  position: absolute;
+  top: 0;
+  color: #fff;
+  background: rgba(0,0,0, .3);
+  font-size: .8em;
+  padding: 8px 12px;
+  opacity: 0;
+  transition: opacity .5s;
 }
 .css-slideshow:hover figure figcaption{
-   transition: opacity .5s;
-   opacity: 1;
+  transition: opacity .5s;
+  opacity: 1;
+}
+.css-slideshow-attr{
+  max-width: 495px;
+  text-align: right;
+  font-size: .7em;
+  font-style: italic;
+  margin:0 auto;
+}
+.css-slideshow-attr a{
+  color: #666;
 }
 .css-slideshow figure{
-   opacity:0;
+  opacity:0;
 }
-
 figure:nth-child(1) {
-   animation: xfade 48s 42s infinite;
+  animation: xfade 48s 42s infinite;
 }
 figure:nth-child(2) {
-   animation: xfade 48s 36s infinite;
+  animation: xfade 48s 36s infinite;
 }
 figure:nth-child(3) {
-   animation: xfade 48s 30s infinite;
+  animation: xfade 48s 30s infinite;
 }
 figure:nth-child(4) {
-   animation: xfade 48s 24s infinite;
+  animation: xfade 48s 24s infinite;
 }
 figure:nth-child(5) {
-   animation: xfade 48s 18s infinite;
+  animation: xfade 48s 18s infinite;
 }
 figure:nth-child(6) {
-   animation: xfade 48s 12s infinite;
+  animation: xfade 48s 12s infinite;
 }
 figure:nth-child(7) {
-   animation: xfade 48s 6s infinite;
+  animation: xfade 48s 6s infinite;
 }
 figure:nth-child(8) {
-   animation: xfade 48s 0s infinite;
+  animation: xfade 48s 0s infinite;
 }
 
 @keyframes xfade{
-   0%{
-      opacity: 1;
-   }
-   10.5% {
-      opacity:1;
-   }
-   12.5%{
-      opacity: 0;
-   }
-   98% {
-      opacity:0;
-   }
-   100% {
-      opacity:1;
-   }
-}
+  0%{
+    opacity: 1;
+  }
+  10.5% {
+    opacity: 1;
+  }
+  12.5%{
+    opacity: 0;
+  }
+  98% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
 
 </style>
 </head>
@@ -136,28 +149,23 @@ figure:nth-child(8) {
   
 <nav><a href="index.html">HOME</a> | <a href="about.html">ABOUT ME</a> | <a href="work.html">WORK</a> | <a href="contact.html">CONTACT ME</a></nav><br>
 
-<div class="css-slideshow"> 
-  <figure> 
-    <img src="http://i.imgur.com/aOFUd00.jpg" width="495" height="370" /> 
-     <figcaption><strong>CSS3:</strong> CSS3 delivers a...</figcaption> 
-  </figure> 
-  <figure> 
-    <img src="http://i.imgur.com/tp0DWJt.jpg" width="495" height="370" /> 
-    <figcaption><strong>Semantics:</strong> Giving meaning to...</figcaption> 
-  </figure>
-  <figure> 
-    <img src="http://i.imgur.com/pdoODi9.jpg" width="495" height="370" /> 
-    <figcaption><strong>Semantics:</strong> Giving meaning to...</figcaption> 
-  </figure>
-  <figure> 
-    <img src="http://i.imgur.com/5DixkeO.jpg" width="495" height="370" /> 
-    <figcaption><strong>Semantics:</strong> Giving meaning to...</figcaption> 
-  </figure>
-  <figure> 
-    <img src="http://i.imgur.com/OLx0mnZ.jpg" width="495" height="370" /> 
-    <figcaption><strong>Semantics:</strong> Giving meaning to...</figcaption> 
-  </figure>
-</div>
+<div class="css-slideshow">
+    <figure>
+        <img src="http://i.imgur.com/aOFUd00.jpg" alt="The Joker" width="495" height="370" class="alignnone size-full wp-image-172" /><figcaption><strong>The Joker</strong></figcaption> 
+    </figure>
+    <figure>
+        <img src="http://i.imgur.com/tp0DWJt.jpg" alt="Bahia Restaurant Menu" width="495" height="370" class="alignnone size-full wp-image-179" /><figcaption><strong>Bahia Restaurant Menu</strong></figcaption> 
+    </figure>
+    <figure>
+        <img src="http://i.imgur.com/pdoODi9.jpg" alt="Mars Attacks Music Festival" width="495" height="370" class="alignnone size-large wp-image-178" /><figcaption><strong> Mars Attacks Music Festival Poster</strong></figcaption> 
+    </figure>
+    <figure>
+        <img src=" http://i.imgur.com/5DixkeO.jpg " alt="Mars Attacks Music Festival" width="495" height="370" class="alignnone size-full wp-image-177" /><figcaption><strong> Mars Attacks Music Festival Banner</strong></figcaption> 
+    </figure>
+<figure>
+        <img src=" http://i.imgur.com/OLx0mnZ.jpg " alt="David Bowie Letters" width="495" height="370" class="alignnone size-large wp-image-176" /><figcaption><strong>David Bowie Letters</strong></figcaption> 
+    </figure>
+  </div>
 
 <iframe src="Valentina.Pardi.Resume.pdf" title="Valentina Pardi Resume" width=500px height=400px></iframe>
 
