--- a/work.html
+++ b/work.html
@@ -141,6 +141,15 @@ figure:nth-child(8) {
     opacity: 1;
 
 </style>
+
+<script>
+//window.open("http://valentinapardi.me/thejoker.html","", "height=200,width=300,top=300,left=800");
+function showJoker(event){
+  window.open("thejoker.html","", "height=200,width=300,top=300,left=800");
+  event.preventDEFAULT();
+}
+</script>
+
 </head>
 
 <body>
@@ -151,7 +160,7 @@ figure:nth-child(8) {
 
 <div class="css-slideshow">
     <figure>
-        <img src="http://i.imgur.com/aOFUd00.jpg" alt="The Joker" width="495" height="370" class="alignnone size-full wp-image-172" /><figcaption><strong>The Joker</strong></figcaption> 
+        <a href="http://i.imgur.com/aOFUd00.jpg" alt="The Joker" width="495" height="370" class="alignnone size-full wp-image-172"></a><figcaption><strong>The Joker</strong></figcaption> 
     </figure>
     <figure>
         <img src="http://i.imgur.com/tp0DWJt.jpg" alt="Bahia Restaurant Menu" width="495" height="370" class="alignnone size-full wp-image-179" /><figcaption><strong>Bahia Restaurant Menu</strong></figcaption> 
