--- a/work.html
+++ b/work.html
@@ -160,7 +160,7 @@ function showJoker(event){
 
 <div class="css-slideshow">
     <figure>
-        <a href="http://i.imgur.com/aOFUd00.jpg" alt="The Joker" width="495" height="370" class="alignnone size-full wp-image-172"></a><figcaption><strong>The Joker</strong></figcaption> 
+        <img src="http://i.imgur.com/aOFUd00.jpg" alt="The Joker" width="495" height="370" class="alignnone size-full wp-image-172"/><figcaption><strong>The Joker</strong></figcaption> 
     </figure>
     <figure>
         <img src="http://i.imgur.com/tp0DWJt.jpg" alt="Bahia Restaurant Menu" width="495" height="370" class="alignnone size-full wp-image-179" /><figcaption><strong>Bahia Restaurant Menu</strong></figcaption> 
