--- a/contact.html
+++ b/contact.html
@@ -71,5 +71,15 @@ nav{
 
 </section>
  </article>
+ 
+ <!-- SnapWidget -->
+<iframe src="http://snapwidget.com/in/?u=dmFsZW5wYXJkaXxpbnwxMjV8M3wzfHxub3w1fG5vbmV8b25TdGFydHx5ZXN8bm8=&ve=080316" title="Instagram Widget" class="snapwidget-widget" allowTransparency="true" frameborder="0" scrolling="no" style="border:none; overflow:hidden; width:390px; height:390px"></iframe>
+ 
+ <section>
+<p><a href="https://www.linkedin.com/in/valentina-pardi-a86ba6b4?trk=nav_responsive_tab_profile" target="_blank"><img src="http://i.imgur.com/2IVemHw.png" height="20" alt="LinkedIn"></a> <a href="https://twitter.com/payval_" target="_blank"><img src="http://i.imgur.com/5el9c6p.png" height="20" alt="Twitter"></a> <a href="https://www.instagram.com/itsvalzzz/" target="_blank"><img src="http://i.imgur.com/oOrV8M8.png" height="20" alt="Instagram"></a>
+</section>
+<footer>Valentina Pardi © 2016</footer>
+</body>
+
 <footer>Valentina Pardi © 2016</footer>
 </body>
