--- a/contact.html
+++ b/contact.html
@@ -6,15 +6,19 @@
   <link href='https://fonts.googleapis.com/css?family=Dosis:200' rel='stylesheet' type='text/css'>
   <link href='https://fonts.googleapis.com/css?family=Oswald:700' rel='stylesheet' type='text/css'>
   <style>
-    body{
+     body{
       margin: 0;
     text-align: center;
     background-color: white;
     color: black;
     font-family: 'Dosis', sans-serif;;
-     background-repeat:no-repeat;
-     background-size:cover;
+     background-repeat: no-repeat;
+     background-size: cover;
+     padding: 15px;
+      background-image:  url(http://i.imgur.com/LlPLCyG.png);
+      background-attachment: fixed;
     }
+    
     a {
   color: black;
   text-decoration: none;
