--- a/contact.html
+++ b/contact.html
@@ -43,17 +43,11 @@ nav{
 }
 
 #hero{
-      padding: 15px;
-      background:  url(http://i.imgur.com/LlPLCyG.png);
-      background-size: cover;
-      background-repeat: no-repeat;
+      padding: 15px
 }
 
 #contact-me {
-  padding: 15px;
-      background:  url(http://i.imgur.com/LlPLCyG.png);
-      background-size: cover;
-      background-repeat: no-repeat;
+  padding: 15px
 }
       
   </style>
