--- a/work.html
+++ b/work.html
@@ -158,6 +158,8 @@ function showJoker(event){
   
 <nav><a href="index.html">HOME</a> | <a href="about.html">ABOUT ME</a> | <a href="work.html">WORK</a> | <a href="contact.html">CONTACT ME</a></nav><br>
 
+<h1>WORK</h1>
+
 <div class="css-slideshow">
     <figure>
         <img src="http://i.imgur.com/aOFUd00.jpg" alt="The Joker" width="495" height="370" class="alignnone size-full wp-image-172"/><figcaption><strong><a href="" onclick="showJoker(event)">The Joker</a></strong></figcaption> 
