--- a/work.html
+++ b/work.html
@@ -161,7 +161,7 @@ function showJoker(event){
 
 <div class="css-slideshow">
     <figure>
-        <img src="http://i.imgur.com/aOFUd00.jpg" alt="The Joker" width="495" height="370" class="alignnone size-full wp-image-172"/><figcaption><strong><a href="" onclick="showJoker(event)">The Joker</a></strong></figcaption> 
+        <img src="http://i.imgur.com/aOFUd00.jpg" alt="The Joker" width="495" height="370" class="alignnone size-full wp-image-172"/><figcaption><strong>The Joker</strong></figcaption> 
     </figure>
     <figure>
         <img src="http://i.imgur.com/tp0DWJt.jpg" alt="Bahia Restaurant Menu" width="495" height="370" class="alignnone size-full wp-image-179" /><figcaption><strong>Bahia Restaurant Menu</strong></figcaption> 
@@ -183,12 +183,5 @@ function showJoker(event){
 
 </section>
 
-<script>
-//window.open("http://valentinapardi.me/thejoker.html","", "height=200,width=300,top=300,left=800");
-function showJoker(event){
-  window.open("thejoker.html","", "height=200,width=300,top=300,left=800");
-  event.preventDEFAULT();
-}
-</script>
 </body>
 <footer>Valentina Pardi © 2016</footer>
