--- a/index.html
+++ b/index.html
@@ -94,6 +94,6 @@ function showPrices(event){
 }
 
 </script>
-</body>
 
-<footer>Valentina Pardi © 2016
+<footer>Valentina Pardi © 2016</footer>
+</body>
