--- a/index.html
+++ b/index.html
@@ -95,5 +95,9 @@ function showPrices(event){
 
 </script>
 
+<section>
+  <img src="https://www.w3.org/html/logo/downloads/HTML5_Logo_128.png" height="100">
+</section>
+
 <footer>Valentina Pardi © 2016</footer>
 </body>
