--- a/contact.html
+++ b/contact.html
@@ -69,12 +69,18 @@ nav{
 
 </section>
  </article>
+ <section>
+<h1>Location</h1>
+<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3592.413341878776!2d-80.19068858452339!3d25.789934213724592!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x88d9b6a7a2fd7ed3%3A0x6b04c9fb83a8090c!2sMiami+International+University+of+Art+%26+Design!5e0!3m2!1sen!2sus!4v1458652847785" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+</section>
 
+<h1>Instagram</h1>
 <section>
  <!-- SnapWidget -->
 <iframe src="http://snapwidget.com/in/?u=dmFsZW5wYXJkaXxpbnwxMjV8M3wzfHxub3w1fG5vbmV8b25TdGFydHx5ZXN8bm8=&ve=080316" title="Instagram Widget" class="snapwidget-widget" allowTransparency="true" frameborder="0" scrolling="no" style="border:none; overflow:hidden; width:390px; height:390px"></iframe>
 </section>
 
+<h1>Twitter</h1>
 <section>
   <!-- TwitWidget -->
 <iframe src="http://twitwidget.com/b/?u=cGF5dmFsX3x0d3xncmlkfDEyNXwzfDN8fDU=&v=21316" title="Twitter Photo Widget" allowTransparency="true" frameborder="0" scrolling="no" style="border:none; overflow:hidden; width:390px; height:390px"></iframe>
