--- a/about.html
+++ b/about.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <head>
   <meta charset="UTF-8">
+   <meta name=viewport content="width=device-width, initial-scale=1">
    <link rel="icon" type="image/png" href="http://i.imgur.com/3ekcifO.png">
   <title>Valentina Pardi | About</title>
   <link href='https://fonts.googleapis.com/css?family=Dosis:200' rel='stylesheet' type='text/css'>
