--- a/work.html
+++ b/work.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <head>
   <meta charset="UTF-8">
+   <meta name=viewport content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/png" href="http://i.imgur.com/3ekcifO.png">
   <script src="//cdn.optimizely.com/js/5168400477.js"></script>
   <title>Valentina Pardi | Work</title>
