--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
-  width: 100%;
+  max-width:100%;
 height: 100%;
     }
     a {
