--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
-  max-width: auto;
-height: auto;
+  max-width: 100%;
+height: 100%;
     }
     a {
   color: black;
@@ -61,7 +61,7 @@ img #ualogo {
    position: absolute;
    top: 50%;
    left: 50%;
-   width: auto;
+   width: 500px;
    height: 500px;
    margin-top: -250px;
    margin-left: -250px;
