--- a/index.html
+++ b/index.html
@@ -61,8 +61,7 @@ img #ualogo {
    position: absolute;
    top: 50%;
    left: 50%;
-   width: 500px;
-   height: 500px;
+   max-width: 100%;
    margin-top: -250px;
    margin-left: -250px;
    padding: 20px;
@@ -79,7 +78,7 @@ p {
   
 <nav><a href="index.html">HOME</a> | <a href="about.html">ABOUT ME</a> | <a href="work.html">WORK</a> | <a href="contact.html">CONTACT ME</a><br></nav>
 <br>
-  <img id="ualogo" src="http://i.imgur.com/1WR1hqT.png" max-width="100%" alt="UA Designs logo">
+  <img id="ualogo" src="http://i.imgur.com/1WR1hqT.png" alt="UA Designs logo">
 <h1>Welcome to UA Designs webpage</h1>
 <article>
 <p> We provide development services. <a href="" onclick="showPrices(event)"> Please see our price list. </a> </p>
