--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@ function showPrices(event){
 </script>
 
 <section>
-  <img src="https://www.w3.org/html/logo/downloads/HTML5_Logo_128.png" height="80">
+  <img src="https://www.w3.org/html/logo/downloads/HTML5_Logo_128.png" height="80" alt="w3 Logo">
 </section>
 
 <footer>Valentina Pardi © 2016</footer>
