--- a/index.html
+++ b/index.html
@@ -57,14 +57,14 @@ nav{
   right: 20px;
 }
 
-img #ualogo {
-   position: absolute;
+img#ualogo {
+/*   position: absolute;
    top: 50%;
-   left: 50%;
+   left: 50%;*/
    max-width: 100%;
-   margin-top: -250px;
+   /* margin-top: -250px;
    margin-left: -250px;
-   padding: 20px;
+   padding: 20px;*/
 }
 p {
   margin-top: 30px;
