--- a/about.html
+++ b/about.html
@@ -8,6 +8,7 @@
   <link href='https://fonts.googleapis.com/css?family=Oswald:700' rel='stylesheet' type='text/css'>
   <style>
     body{
+      margin: 0;
     text-align: center;
     background-color: white;
     color: black;
@@ -81,7 +82,7 @@ nav{
 </section>
 </article>
 <section>
-<p><a href="https://www.linkedin.com/in/valentina-pardi-a86ba6b4?trk=nav_responsive_tab_profile" target="_blank"><img src="http://i.imgur.com/2IVemHw.png" height="20" alt="LinkedIn"></a> <a href="https://twitter.com/payval_" target="_blank"><img src="http://i.imgur.com/5el9c6p.png" height="20" alt="Twitter"></a> <a href="https://www.instagram.com/itsvalzzz/" target="_blank"><img src="http://i.imgur.com/oOrV8M8.png" height="20" alt="Instagram"></a>
+<p><a href="https://www.linkedin.com/in/valentina-pardi-a86ba6b4?trk=nav_responsive_tab_profile" target="_blank"><img src="http://i.imgur.com/2IVemHw.png" height="20" alt="LinkedIn"></a> <a href="https://twitter.com/payval_" target="_blank"><img src="http://i.imgur.com/5el9c6p.png" height="20" alt="Twitter"></a> <a href="https://www.instagram.com/valenpardi/" target="_blank"><img src="http://i.imgur.com/oOrV8M8.png" height="20" alt="Instagram"></a>
 </section>
 <footer>Valentina Pardi © 2016</footer>
 </body>
