--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@ p {
 <p> We provide development services. <a href="" onclick="showPrices(event)"> Please see our price list. </a> </p>
 </article>
 
-<p><a href="https://www.linkedin.com/in/valentina-pardi-a86ba6b4?trk=nav_responsive_tab_profile" target="_blank"> <img src="http://i.imgur.com/2IVemHw.png" height="20" alt="LinkedIn"></a> <a href="https://twitter.com/payval_" target="_blank"> <img src="http://i.imgur.com/5el9c6p.png" height="20" alt="Twitter"></a> <a href="https://www.instagram.com/itsvalzzz/" target="_blank"> <img src="http://i.imgur.com/oOrV8M8.png" height="20" alt="Instagram"></a><br>
+<p><a href="https://www.linkedin.com/in/valentina-pardi-a86ba6b4?trk=nav_responsive_tab_profile" target="_blank"> <img src="http://i.imgur.com/2IVemHw.png" height="20" alt="LinkedIn"></a> <a href="https://twitter.com/payval_" target="_blank"> <img src="http://i.imgur.com/5el9c6p.png" height="20" alt="Twitter"></a> <a href="https://www.instagram.com/valenpardi/" target="_blank"> <img src="http://i.imgur.com/oOrV8M8.png" height="20" alt="Instagram"></a><br>
 </section>
 <script>
 //window.open("http://valentinapardi.me/prices.html","", "height=200,width=300,top=300,left=800");
