--- a/typekit.html
+++ b/typekit.html
@@ -1,14 +1,15 @@
 <!doctype html>
 <html>
 <head>
-<script src="https://use.typekit.net/uhp0bcu.js"></script>
+	<script src="https://use.typekit.net/ees4vue.js"></script>
 <script>try{Typekit.load({ async: true });}catch(e){}</script>
 <style>
 
 h1 {
-	font-family: hobeaux-rococeaux-sherman, sans-serif;
-	font-style: normal;
-	font-weight: 400;
+	font-family: uppercut-angle, sans-serif;
+font-style: normal;
+font-weight: 400;
+	
 }
 
 </style>
