--- a/wedding.html
+++ b/wedding.html
@@ -84,9 +84,9 @@ footer {
 <nav><a href="wedding.html">HOME</a> | <a href="wedding.html">WHAT WE DO</a> | <a href="wedding.html">GALLERY</a> | <a href="wedding.html">CONTACT US</a><br></nav>
 <br>
 <h2 id="nov">November 1st, 2016</h2>
-<h1>J O H N  A N D  A L E X ' S  W E D D I N G</h1>
+<h1>JOHN AND ALEX'S WEDDING</h1>
 <div class="box">
-<h2>W E L C O M E</h2>
+<h2>WELCOME</h2>
 <article>
 <p> This is John and Alex's wedding page. Welcome! In this website, you will be able to view the videos, pictures and other special features from our weding. Please feel free to go back to the gallery as much as you want to, our pictures will take you back - guaranteed. Thank you for attending!</p>
 </article>
