--- a/wedding.html
+++ b/wedding.html
@@ -4,78 +4,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
   <link rel="icon" type="image/png" href="http://i.imgur.com/mY5cRoo.png">
   <title>J&A'S Wedding | Home</title>
-  <link href='https://fonts.googleapis.com/css?family=Dosis:200' rel='stylesheet' type='text/css'>
-  <link href='https://fonts.googleapis.com/css?family=Oswald:700' rel='stylesheet' type='text/css'>
-  <style>
-    body{
-      margin-top: 10px;
-    text-align: center;
-    background-color: white;
-    color: black;
-    font-family: 'Dosis', sans-serif;
-      background: url(http://i.imgur.com/NVUblJc.jpg) no-repeat center center fixed; 
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
-  max-width: 100%;
-height: 100%;
-    }
-    a {
-  color: white;
-  text-decoration: none;
-}
-a:hover {
-  color: grey;
-}
-h1 {
-  color: white;
-  font-family: 'Oswald', sans-serif;
-  font-size: 50px;
-  margin-top: -12px;
-}
-h1:hover {
-  color:  #D3D3D3;
-}
-
-nav{
-    display: inline-block;
-    list-style-type: none;
-    margin-left: auto;
-    margin-right: auto;
-    padding: 2px;
-}
-
-h2 {
-  color: black;
-  margin-top: 10px;
-}
-
-#nov {
-  color: white;
-}
-
-p {
-  margin-top: 30px;
-  text-align: center;
-  margin-left: 120px;
-  margin-right: 120px;
-  color: black;
-}
-
-footer {
-  color: white;
-}
-
-.box{
-    width: 800px;
-    height: 200px;
-    background-color: white;
-    margin-left: 240px;
-    opacity: 0.8;
-  }
-
-  </style>
+  <link rel="stylesheet" href="styles.css"
 </head>
 
 <body>
@@ -84,7 +13,7 @@ footer {
 <nav><a href="wedding.html">HOME</a> | <a href="wedding.html">WHAT WE DO</a> | <a href="wedding.html">GALLERY</a> | <a href="wedding.html">CONTACT US</a><br></nav>
 <br>
 <h2 id="nov">November 1st, 2016</h2>
-<h1>JOHN AND ALEX'S WEDDING</h1>
+<h1>John and Alex's Wedding</h1>
 <div class="box">
 <h2>WELCOME</h2>
 <article>
