--- a/wedding.html
+++ b/wedding.html
@@ -21,6 +21,10 @@
 </article>
 </div>
 
+<div id="happy">
+<img src="http://images.clipartpanda.com/smiley-face-clip-art-images-sun_smiley_face.png" alt="Happy Face" title="Happy Face">
+</div>
+
 <p><a href="https://www.linkedin.com/in/valentina-pardi-a86ba6b4?trk=nav_responsive_tab_profile" target="_blank"> <img src="http://www.rampgroup.com/images/linkedin.png" height="20" alt="LinkedIn"></a> <a href="https://twitter.com/payval_" target="_blank"> <img src="http://static1.squarespace.com/static/54d7dfb1e4b021e818a1d6bc/t/5519a100e4b0536a7e22b95d/1427742979069/" height="20" alt="Twitter"></a> <a href="https://www.instagram.com/valenpardi/" target="_blank"> <img src="http://static.wixstatic.com/media/90ef54_a6d2bc9d491f0dd12f49904d9211cef3.png" height="20" alt="Instagram"></a><br>
 </section>
 
