--- a/index.html
+++ b/index.html
@@ -1,102 +1,87 @@
-<!DOCTYPE html>
+<html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-  <link rel="icon" type="image/png" href="http://i.imgur.com/3ekcifO.png">
-  <title>Valentina Pardi | Home</title>
-  <link href='https://fonts.googleapis.com/css?family=Dosis:200' rel='stylesheet' type='text/css'>
-  <link href='https://fonts.googleapis.com/css?family=Oswald:700' rel='stylesheet' type='text/css'>
-  <style>
-    body{
-      margin-top: 95px;
-    text-align: center;
-    background-color: white;
-    color: black;
-    font-family: 'Dosis', sans-serif;;
-      background: url(http://i.imgur.com/LlPLCyG.png) no-repeat center center fixed; 
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
-  max-width: 100%;
-height: 100%;
-    }
-    a {
-  color: black;
-  text-decoration: none;
-}
-a:hover {
-  color: grey;
-}
-h1 {
-  color: black;
-  font-family: 'Oswald', sans-serif;
-}
-h1:hover {
-  color:  #D3D3D3;
-}
-#what-we-do{
-  background-color: black;
-  padding: 20px;
-}
-#what-we-do h1{
-  color: white;
-}
-#who-i-am{
-  margin-top: 30px;
-  background-color: white;
-  padding: 20px;
-}
-#who-i-am h1{
-  color: black;
-}
-nav{
-  position: absolute;
-  top: 20px;
-  right: 20px;
-}
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<title></title>
+<meta name="keywords" content="" />
+<meta name="description" content="" />
+<link href="http://fonts.googleapis.com/css?family=Didact+Gothic" rel="stylesheet" />
+<link href="default.css" rel="stylesheet" type="text/css" media="all" />
+<link href="fonts.css" rel="stylesheet" type="text/css" media="all" />
+<link rel="stylesheet" href="css/animate.css">
+              <script src="js/wow.min.js"></script>
+              <script>
+              new WOW().init();
+              </script>
 
-img#ualogo {
-/*   position: absolute;
-   top: 50%;
-   left: 50%;*/
-   max-width: 100%;
-   /* margin-top: -250px;
-   margin-left: -250px;
-   padding: 20px;*/
-}
-p {
-  margin-top: 30px;
-}
 
-  </style>
+<!--[if IE 6]><link href="default_ie6.css" rel="stylesheet" type="text/css" /><![endif]-->
+
 </head>
-
 <body>
-<section id="hero">
-  
-<nav><a href="index.html">HOME</a> | <a href="about.html">ABOUT ME</a> | <a href="work.html">WORK</a> | <a href="contact.html">CONTACT ME</a><br></nav>
-<br>
-  <img id="ualogo" src="http://i.imgur.com/1WR1hqT.png" alt="UA Designs logo">
-<h1>Welcome to UA Designs webpage</h1>
-<article>
-<p> We provide development services. <a href="" onclick="showPrices(event)"> Please see our price list. </a> </p>
-</article>
-
-<p><a href="https://www.linkedin.com/in/valentina-pardi-a86ba6b4?trk=nav_responsive_tab_profile" target="_blank"> <img src="http://i.imgur.com/2IVemHw.png" height="20" alt="LinkedIn"></a> <a href="https://twitter.com/payval_" target="_blank"> <img src="http://i.imgur.com/5el9c6p.png" height="20" alt="Twitter"></a> <a href="https://www.instagram.com/valenpardi/" target="_blank"> <img src="http://i.imgur.com/oOrV8M8.png" height="20" alt="Instagram"></a><br>
-</section>
-<script>
-//window.open("http://valentinapardi.me/prices.html","", "height=200,width=300,top=300,left=800");
-function showPrices(event){
-  window.open("prices.html","", "height=200,width=300,top=300,left=800");
-  event.preventDEFAULT();
-}
-
-</script>
-
-<section>
-  <img src="https://www.w3.org/html/logo/downloads/HTML5_Logo_128.png" height="80" alt="w3 Logo">
-</section>
-
-<footer>Valentina Pardi © 2016</footer>
+<div id="header-wrapper">
+	<div id="header" class="container">
+		<div id="logo">
+			<h1><a href="#">blackink.</a></h1>
+		</div>
+		<div id="menu">
+			<ul>
+				<li class="active"><a href="#" accesskey="1" title="">Homepage</a></li>
+				<li><a href="#" accesskey="2" title="">Our Clients</a></li>
+				<li><a href="#" accesskey="3" title="">About Us</a></li>
+				<li><a href="#" accesskey="4" title="">Portfolio</a></li>
+				<li><a href="#" accesskey="5" title="">Contact Us</a></li>
+			</ul>
+		</div>
+	</div>
+	<div id="banner" class="container">
+		<div class="title">
+			<h2>blackink designs</h2>
+			<span class="byline">sicker than your average.</span>
+		</div>
+		<ul class="actions">
+			<li><a href="#" class="button">explore</a></li>
+		</ul>
+	</div>
+</div>
+<div id="wrapper">
+	<div id="three-column" class="container">
+		<div class="title">
+			<h2>what we do.</h2>
+			<span class="byline">we are a team of passionate graphic designers offering different services for our valued customers. </span>
+		</div>
+		<div class="boxA">
+			<span class="fa fa-cloud-download wow bounceInUp"></span>
+			<p>we advertise your company, making sure it gets the attention it needs.</p>
+			<a href="#" class="button button-alt">more info</a>
+		</div>
+		<div class="boxB">
+			<span class="fa fa-cogs"></span>
+			<p>we brand your new company, making sure your job gets a lot easier.</p>
+			<a href="#" class="button button-alt">more info</a>
+		</div>
+			<span class="fa fa-wrench"></span>
+			<p> we do a whole lot other things, making sure you get what you need when you need it.</p>
+			<a href="#" class="button button-alt">more info</a>
+		</div>
+	</div>
+</div>
+<div id="welcome">
+	<div class="container">
+		<div class="title">
+			<h2>this is some of our work.</h2>
+			<span class="byline">we are proud to say we are fully dedicated to making life easier. </span>
+		</div>
+		<div>
+		<img src="http://i.imgur.com/QqD674X.jpg" class="animated bounce" height="350px" />
+		<img src="http://i.imgur.com/fsPGkIP.jpg" height="350px">
+	</div>
+		<ul class="actions">
+			<li><a href="#" class="button">go up</a></li>
+		</ul>
+	</div>
+</div>
+<div id="copyright" class="container">
+	<p>&copy; blackink designs. All rights reserved.</p>
+</div>
 </body>
+</html>
